--- a/vendas.html
+++ b/vendas.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Página de Vendas</h1>
     <a href="./index.html">Voltar para página iniciial</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sequi voluptas aut illo consequatur eligendi quos
+        doloribus delectus, ducimus facilis reiciendis optio esse vero inventore consectetur eius recusandae dicta
+        exercitationem!</p>
 </body>
 
 </html>
