Criada página de contato

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Página Home</h1>
     <a href="./vendas.html">Ir para páginas de vendas</a>
+    <a href="./contato.html">Contato</a>
 </body>
 
 </html>
